Style: Create user component to improve readability and fix profile nav style

--- a/client/src/components/channel/channel-users-list/ChannelUsersList.module.css
+++ b/client/src/components/channel/channel-users-list/ChannelUsersList.module.css
@@ -1,6 +1,6 @@
 .container {
   height: 100%;
-  width: 15%;
+  width: 16%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 1rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .container::-webkit-scrollbar {
@@ -24,62 +24,12 @@
 
 .role {
   width: 100%;
-}
-
-.role+.role {
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
 }
 
 .roleTitle {
+  margin: 0;
   margin-left: 0.3rem;
   font-weight: 650;
-  font-size: 17px;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 0.3rem;
-  margin: 0.2rem 0;
-  border-radius: 0.25rem;
-  cursor: pointer;
-  transition: 300ms;
-}
-
-.user:hover {
-  background-color: var(--bg-hover);
-}
-
-.avatar {
-  height: 2.25rem;
-  width: 2.25rem;
-  border-radius: 50%;
-  margin-right: 0.75rem;
-}
-
-.text {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.username {
-  width: 100%;
-  font-size: 16px;
-  font-weight: 600;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.customStatus {
-  width: 100%;
   font-size: 12px;
-  font-weight: 500;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
