--- a/client/src/components/nav/Nav.module.css
+++ b/client/src/components/nav/Nav.module.css
@@ -8,4 +8,5 @@
   box-sizing: border-box;
   padding: 1rem 0.6rem;
   background-color: var(--bg-darker);
+  position: relative;
 }
