--- a/client/src/components/nav/nav-profile/NavProfile.module.css
+++ b/client/src/components/nav/nav-profile/NavProfile.module.css
@@ -1,26 +1,50 @@
 .container {
-  width: 100%;
-  height: 100%;
-}
-
-.container:hover>.image {
-  border-radius: 0.95rem;
-
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  transition: 350ms;
-}
-
-.status {
-  border-radius: 50%;
-  height: 0.75rem;
-  width: 0.75rem;
+  background-color: var(--bg-darker);
   position: absolute;
-  bottom: -7%;
-  right: -4%;
-  border: 4px solid var(--bg-darker);
+  bottom: 0;
+  left: 100%;
+  z-index: 10;
+  padding: 0.25rem;
+  width: 15rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.subcontainer {
+  display: flex;
+  align-items: center;
+  margin-right: 0.25rem;
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
+
+.iconContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 0.25rem;
+}
+
+.iconContainer:hover {
+  background-color: var(--bg-hover);
+}
+
+.icon {
+  cursor: pointer;
+  padding: 0.4rem;
+  border-radius: 0.25rem;
+}
+
+.icon:hover {
+  background-color: var(--bg-hover);
+}
+
+.disabled {
+  color: red;
+  text-decoration: line-through;
+  list-style: red;
+  position: absolute;
+  top: 18%;
+  left: 18%;
 }
