--- a/client/src/components/server/Server.module.css
+++ b/client/src/components/server/Server.module.css
@@ -5,7 +5,7 @@
 }
 
 .nav {
-  width: 15%;
+  width: 18rem;
   display: flex;
   flex-direction: column;
   position: relative;
